fix: Copy link button misaligned

--- a/src/components/Modals/ShareModal/ShareModal.css
+++ b/src/components/Modals/ShareModal/ShareModal.css
@@ -98,6 +98,9 @@
 }
 
 .ShareModal .share-modal .copy-group .copy-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: var(--innocence);
   border-radius: 0 8px 8px 0;
   border-left: 1px solid;
@@ -109,7 +112,7 @@
   cursor: pointer;
   text-transform: uppercase;
   text-align: center;
-  width: 120px;
+  width: 75px;
   color: var(--primary);
 }
 
